--- a/style.css
+++ b/style.css
@@ -13,17 +13,15 @@ body{
 .navigation{
     background:#ffffff;
 }
-
-/* header {
-    background:#ffffff;
-    padding:0 50px 82px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    width:100%;
-    border-bottom: 2px;
-    border-bottom-style:solid;
-    color:#cccccc;    
-    z-index: 5;
- } */
+/* Navigation bar*/
+.nav1 {
+    background: #ffffff;
+    border-bottom: solid;
+    border-bottom-color: #dddddd;
+}
+.navbar-brand {
+    color: #ffffff;
+}
 
 /*Link styles*/
 
@@ -33,26 +31,16 @@ a:hover {
 a {
     color:#4aaaa5;
 }
-
-
-.myPic {
-    width: 175px;
-    height:200px;
-}
 /* Paragraph font*/
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.nav1 {
-    background: #ffffff;
-    border-bottom: solid;
-    border-bottom-color: #dddddd;
+/*My Picture*/
+.myPic {
+    width: 175px;
+    height:200px;
 }
-.navbar-brand {
-    color: #ffffff;
-}
-/*font style for h2*/
+/*font style for h2 Titles*/
 h2 {
     background: #ffffff;
     color: #4aaaa5;
@@ -109,18 +97,13 @@ form {
     bottom: 25px;
     color: #ffffff;
 }
-
-
-
+/*my Name on header*/
 .myName{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color:#4aaaa5;
-    font-size: 25px;
     padding: 20px;
-    
 }
-
 /*Container for Main Content styles*/
-
 .content {
     background: #ffffff;
     margin-top: 3em;
@@ -132,7 +115,7 @@ form {
 }
 
 footer {
-    position: absolute;
+    position: sticky;
     margin:0;
     margin-top: 3em;
     background:#666666;;
