--- a/style.css
+++ b/style.css
@@ -82,10 +82,13 @@ form {
     clear: both;
     position: relative;
     overflow: hidden;
+    
 }
 /* text for images*/
 .titlepic{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+    text-shadow: 1px 2px 3px black;
+    font-weight: 600;
     background:#4aaaa5;
     padding: 10px 20px;
     width: 100%;
